Bug 194067 support unicode file name on drag and drop(D&D). patch by Masatoshi Kimura (:emk) <VYV03354@nifty.ne.jp> r=ere, sr=roc